# Wyrd

./: README.md  package-lock.json  package.json  vite.config.ts  vite.config.ts.lte
Project  Plan/: Wyrd.fdb_latexmk  Wyrd.tex  texput.fls
src/: App.tsx
src-tauri/: .gitignore  Cargo.toml  dump.rdb  mailgun.env  sqlx.env  sqlx.env.template  tauri.conf.json  todo.md
src-tauri/.sqlx/: query-1aad7f1a45fad9ae736c9fd7974d9437c8481f6b097c79022a63d3fa110de6f5.json  query-a2d8dd9a79edca41783a4512ec80bdcafa307f9117d5e50ebfb4140045eaa279.json  query-a93479f17c4bb0c3d32ef835e77decab3c1a0c8b7e41c606e51cc380e66f2abc.json
src-tauri/src/: lib.rs  main.rs  third_party_auth.rs  utils.rs
src-tauri/src/handler/: auth_handler.rs
src-tauri/src/service/: auth_service.rs  email_verification.rs  github_auth.rs  google_auth.rs  microsoft_auth.rs  ms_auth.rs  otp.rs  third_party_auth.rs
src-tauri/src/utils/: password.rs
src-tauri/tests/: serde_test.rs  test_db.rs  test_email.rs  third_party_auth_test.rs
src/renderer/components/: OTP.tsx  Personalize.tsx  Signup.tsx  WelcomePage.tsx
src/renderer/styles/: App.css  Form.css  OTP.css  Personalize.css
